changed contact.html and added styles for contact-template

--- a/contacts.html
+++ b/contacts.html
@@ -31,8 +31,8 @@
                     </div>
                 </a></li>
             <li><a class="navbar-link navbar-active" href="./contacts.html">
-                    <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/perm_contact_calendar.svg"
-                            alt="Contacts Logo">
+                    <div class="navbar-link-content"><img class="navbar_img"
+                            src="./assets/svg/perm_contact_calendar.svg" alt="Contacts Logo">
                         <p>Contacts</p>
                     </div>
                 </a></li>
@@ -250,7 +250,7 @@
                         <h4 class="contact-list-section-head d_none">Z</h4>
                         <div class="section-seperator d_none"></div>
                         <ul class="list-items"></ul>
-                    </section>        
+                    </section>
                 </div>
             </section>
             <section class="contact">
@@ -259,16 +259,37 @@
                     <div class="contacts-header-seperator"></div>
                     <p class="contacts-header-txt">Better with a Team</p>
                 </div>
-                <section class="contact-info-big">
+                <section class="contact-template">
+                    <section class="contact-info-big">
                         <img class="svg-img-big" src="./img/icons/contacts-test-icons/test-am.icon.png" alt="">
-                        <div>
+                        <div class="contact-info-big-name-edit-container">
                             <p class="contact-info-big-name">Anton Mayer</p>
                             <div class="contact-info-big-edit">
-                                <button class="contact-btn"><img class="contact-btn-img" src="./img/icons/edit.svg" alt="Edit Icon"><p>Edit</p></button>
-                                <button class="contact-btn"><img class="contact-btn-img" src="./img/icons/delete.svg" alt="Delete Icon"><p>Delete</p></button>
+                                <button class="contact-btn"><img class="contact-btn-img" src="./img/icons/edit.svg"
+                                        alt="Edit Icon">
+                                    <p class="contact-btn-txt">Edit</p>
+                                </button>
+                                <button class="contact-btn"><img class="contact-btn-img" src="./img/icons/delete.svg"
+                                        alt="Delete Icon">
+                                    <p class="contact-btn-txt">Delete</p>
+                                </button>
                             </div>
                         </div>
+                    </section>
+                    <p class="contact-inforamtion-txt">Contact Information</p>
+                    <section class="contact-informations">
+                        <div>
+                            <h5>Email</h5>
+                            <a href="mailto:antom@gmail.com">antom@gmail.com</a>
+                        </div>
+                        <div>
+                            <h5>Phone</h5>
+                            <p class="contact-informations-phone-number">+49 1111 111 11 1</p>
+                        </div>
+                    </section>
                 </section>
+
+
             </section>
         </div>
     </main>
