changed contact.html and added new svgs

--- a/contacts.html
+++ b/contacts.html
@@ -261,7 +261,7 @@
                 </div>
                 <section class="contact-template">
                     <section class="contact-info-big">
-                        <img class="svg-img-big" src="./img/icons/contacts-test-icons/test-am.icon.png" alt="">
+                        <img class="svg-img-big" src="./img/icons/test-am-icon-svg.svg" alt="">
                         <div class="contact-info-big-name-edit-container">
                             <p class="contact-info-big-name">Anton Mayer</p>
                             <div class="contact-info-big-edit">
