--- a/contacts.html
+++ b/contacts.html
@@ -24,33 +24,41 @@
             <section class="overlay-right-side">
                 <img class="overlay-character-icon" src="./assets/svg/char_icon_add_contact.svg"
                     alt=" Empty Character Logo ">
-                <form action="" class="create-form">
-                    <section class="create-form-inputfields">
-                        <div>
-                            <input placeholder="Name" type="text">
-                            <img src="./assets/svg/person.svg" alt="Person Logo">
+                <section class="add-contact-content-container">
+                    <div class="position-container-close-icon">
+                        <div class="add-contact-close-icon-container" onclick="closeOverlay()">
+                            <img class="add-contact-close-icon" src="./assets/svg/close.svg" alt="Close Icon" >
                         </div>
-                        <div>
-                            <input placeholder="Email" type="text">
-                            <img src="./assets/svg/mail.svg" alt="Mail Logo">
-                        </div>
-                        <div>
-                            <input placeholder="Phone" type="text">
-                            <img src="./assets/svg/call.svg" alt="Phone Logo">
-                        </div>
-                    </section>
+                    </div>
+                    <form action="" class="create-form">
+                        <section class="create-form-inputfields">
+                            <div>
+                                <input placeholder="Name" type="text">
+                                <img src="./assets/svg/person.svg" alt="Person Logo">
+                            </div>
+                            <div>
+                                <input placeholder="Email" type="text">
+                                <img src="./assets/svg/mail.svg" alt="Mail Logo">
+                            </div>
+                            <div>
+                                <input placeholder="Phone" type="text">
+                                <img src="./assets/svg/call.svg" alt="Phone Logo">
+                            </div>
+                        </section>
 
-                    <section class="add-contact-buttons">
-                        <button class="add-contact-cancel-btn" onclick="closeOverlay()">
-                            <p class="add-contact-cancel-btn-txt">Cancel</p><img class="add-contact-btn-svg"
-                                src="./assets/svg/iconoir_cancel.svg" alt="Cancel Icon">
-                        </button>
-                        <button class="add-contact-create-contact-btn">
-                            <p class="add-contact-create-contact-btn-txt">Create contact</p><img
-                                class="add-contact-btn-svg" src="./assets/svg/check.svg" alt="Check Icon">
-                        </button>
-                    </section>
-                </form>
+                        <section class="add-contact-buttons">
+                            <button class="add-contact-cancel-btn" onclick="closeOverlay()">
+                                <p class="add-contact-cancel-btn-txt">Cancel</p><img class="add-contact-btn-svg"
+                                    src="./assets/svg/iconoir_cancel.svg" alt="Cancel Icon">
+                            </button>
+                            <button class="add-contact-create-contact-btn">
+                                <p class="add-contact-create-contact-btn-txt">Create contact</p><img
+                                    class="add-contact-btn-svg" src="./assets/svg/check.svg" alt="Check Icon">
+                            </button>
+                        </section>
+                    </form>
+                </section>
+
             </section>
         </section>
     </section>
@@ -107,12 +115,14 @@
                         <div class="section-seperator"></div>
                         <ul class="list-items">
                             <li>
-                                <div id="contact_card_am" class="contact-container contact-container-hoverclass" onclick="showContact()">
-                                    <img id="img_am" class="svg-img-small" src="./img/icons/contacts-test-icons/test-am.icon.png"
-                                        alt="Icon Test Contact">
+                                <div id="contact_card_am" class="contact-container contact-container-hoverclass"
+                                    onclick="showContact()">
+                                    <img id="img_am" class="svg-img-small"
+                                        src="./img/icons/contacts-test-icons/test-am.icon.png" alt="Icon Test Contact">
                                     <div class="contact-info">
                                         <p id="name_am" class="contact-name">Anton Mayer</p>
-                                        <a id="email_am" class="contact-e-mail" href="mailto:antonm@gmail.com">antonm@gmail.com</a>
+                                        <a id="email_am" class="contact-e-mail"
+                                            href="mailto:antonm@gmail.com">antonm@gmail.com</a>
                                     </div>
                                 </div>
                             </li>
@@ -305,7 +315,7 @@
                     <p class="contacts-header-txt">Better with a Team</p>
                 </div>
                 <section id="contact_template" class="contact-template">
-                    
+
                 </section>
 
 
