navbar code changed for summary.html

--- a/summary.html
+++ b/summary.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <nav class="navbar">
-        <img class="navbar-logo" src="./img/icons/logo_join_nav.png" alt="">
+      <div class="navbar-logo-container">
+        <img class="navbar-logo" src="./img/icons/Join_Logo_white.svg" alt="">
+      </div>
         <ul class="nav-list">
-            <li><a class="navbar-link" href="./summary.html"><img class="navbar_img" src="./img/icons/summary_icon.png" alt=""><p>Summary</p></a></li>
-            <li><a class="navbar-link" href="./add_task.html"><img class="navbar_img" src="./img/icons/add_task_icon.png" alt=""><p>Add Task</p></a></li>
-            <li><a class="navbar-link" href="./board.html"><img class="navbar_img" src="./img/icons/board_icon.png" alt=""><p>Board</p></a></li>
-            <li><a class="navbar-link" href="./contacts.html"><img class="navbar_img" src="./img/icons/contacts_icon.png" alt=""><p>Contacts</p></a></li>
+            <li><a class="navbar-link summary-text-1" href="./summary.html"><img class="navbar_img" src="./img/icons/contacts.svg" alt=""><p>Summary</p></a></li>
+            <li><a class="navbar-link summary-text-1" href="./add_task.html"><img class="navbar_img" src="./img/icons/add_task.svg" alt=""><p>Add Task</p></a></li>
+            <li><a class="navbar-link summary-text-1" href="./board.html"><img class="navbar_img" src="./img/icons/board.svg" alt=""><p>Board</p></a></li>
+            <li><a class="navbar-link summary-text-1" href="./contacts.html"><img class="navbar_img" src="./img/icons/contacts.svg" alt=""><p>Contacts</p></a></li>
         </ul>
         <ul class="navbar-footer">
             <li><a href="">Private Policy</a></li>
@@ -25,7 +27,7 @@
     <div class="summary-header">
       <div class="summary-header-text">Kanban Project Management Tool</div>
       <div class="summary-profil">
-        <img src="./img/summary/help.svg" alt="help" class="summary-help" />
+        <img src="./img/icons/help.svg" alt="help" class="summary-help" />
         <div class="profil-header"></div>
       </div>
     </div>
@@ -41,7 +43,7 @@
         <div class="summary-board-overview-todo">
           <div class="todo-content">
             <div class="todo-picture">
-              <img src="img/summary/pencil_1.svg" />
+              <img src="./img/icons/pencil_1.svg" />
             </div>
             <div class="todo-value"><div class="summary-text-5">1</div>
             <div class="summary-text-1">ToDo</div></div>
@@ -50,7 +52,7 @@
         <div class="summary-board-overview-done">
           <div class="todo-content">
             <div class="todo-picture">
-              <img src="img/summary/right_1.svg" />
+              <img src="./img/icons/right_1.svg" />
             </div>
             <div class="todo-value"><div class="summary-text-5">1</div>
             <div class="summary-text-1">ToDo</div></div></div>
@@ -60,7 +62,7 @@
       <div class="summary-board-overview-row-2">
         <div class="summary-board-overview-urgent">
           <div class="urgent-content">
-            <div class="todo-picture"><img src="img/summary/prio.svg" /></div>
+            <div class="todo-picture"><img src="./img/icons/prio.svg" /></div>
             <div class="todo-value">
                 <div class="summary-text-5">1</div>
                 <div class="summary-text-1">ToDo</div>
