--- a/board.html
+++ b/board.html
@@ -83,6 +83,7 @@
                     <h2>Board</h2>
                     <div class="board-actions">
                         <form action="search-bar" class="search-task">
+                          <label for="search-bar">
                             <input type="text" placeholder="Find Task" id="search-bar">
                             <div class="search-button-section">
                               <div class="search-divider"></div>
@@ -92,6 +93,7 @@
                                 </svg>
                               </div>
                             </div>
+                          </label>
                         </form>
                         <button>Add task <img src="./img/icons/add.png" alt="add button"></button>
                     </div>
