--- a/index.html
+++ b/index.html
@@ -36,16 +36,34 @@
             </header>
 
 
-            <div class="input_group">
-                <input type="text" id="Email" name="Email" required placeholder="Email">
-                <input type="password" id="password" name="password" required placeholder="Password">
-            </div>
+            <section class="input_group">
+
+                <div class="input_with_icon" id="input_email">
+                    <input class="email_input" type="text" id="Email" name="Email" required placeholder="Email">
+                    <svg class="email_icon" xmlns="http://www.w3.org/2000/svg" width="20" height="16" viewBox="0 0 20 16"
+                        fill="none">
+                        <path
+                            d="M2 16.5C1.45 16.5 0.979167 16.3042 0.5875 15.9125C0.195833 15.5208 0 15.05 0 14.5V2.5C0 1.95 0.195833 1.47917 0.5875 1.0875C0.979167 0.695833 1.45 0.5 2 0.5H18C18.55 0.5 19.0208 0.695833 19.4125 1.0875C19.8042 1.47917 20 1.95 20 2.5V14.5C20 15.05 19.8042 15.5208 19.4125 15.9125C19.0208 16.3042 18.55 16.5 18 16.5H2ZM18 4.5L10.525 9.175C10.4417 9.225 10.3542 9.2625 10.2625 9.2875C10.1708 9.3125 10.0833 9.325 10 9.325C9.91667 9.325 9.82917 9.3125 9.7375 9.2875C9.64583 9.2625 9.55833 9.225 9.475 9.175L2 4.5V14.5H18V4.5ZM10 7.5L18 2.5H2L10 7.5ZM2 4.75V3.275V3.3V3.2875V4.75Z"
+                            fill="#A8A8A8" />
+                    </svg>
+                </div>
+
+                <div class="input_with_icon" id="input_password"> 
+                    <input class="password_input" type="password" id="password" name="password" required placeholder="Password">
+                    <svg class="password_lock_icon" xmlns="http://www.w3.org/2000/svg" width="16" height="21"
+                        viewBox="0 0 17 22" fill="none">
+                        <path
+                            d="M2.14453 21.8083C1.59453 21.8083 1.1237 21.6125 0.732031 21.2208C0.340365 20.8292 0.144531 20.3583 0.144531 19.8083V9.80835C0.144531 9.25835 0.340365 8.78752 0.732031 8.39585C1.1237 8.00418 1.59453 7.80835 2.14453 7.80835H3.14453V5.80835C3.14453 4.42502 3.63203 3.24585 4.60703 2.27085C5.58203 1.29585 6.7612 0.80835 8.14453 0.80835C9.52786 0.80835 10.707 1.29585 11.682 2.27085C12.657 3.24585 13.1445 4.42502 13.1445 5.80835V7.80835H14.1445C14.6945 7.80835 15.1654 8.00418 15.557 8.39585C15.9487 8.78752 16.1445 9.25835 16.1445 9.80835V19.8083C16.1445 20.3583 15.9487 20.8292 15.557 21.2208C15.1654 21.6125 14.6945 21.8083 14.1445 21.8083H2.14453ZM2.14453 19.8083H14.1445V9.80835H2.14453V19.8083ZM8.14453 16.8083C8.69453 16.8083 9.16537 16.6125 9.55703 16.2208C9.9487 15.8292 10.1445 15.3583 10.1445 14.8083C10.1445 14.2583 9.9487 13.7875 9.55703 13.3959C9.16537 13.0042 8.69453 12.8083 8.14453 12.8083C7.59453 12.8083 7.1237 13.0042 6.73203 13.3959C6.34036 13.7875 6.14453 14.2583 6.14453 14.8083C6.14453 15.3583 6.34036 15.8292 6.73203 16.2208C7.1237 16.6125 7.59453 16.8083 8.14453 16.8083ZM5.14453 7.80835H11.1445V5.80835C11.1445 4.97502 10.8529 4.26668 10.2695 3.68335C9.6862 3.10002 8.97786 2.80835 8.14453 2.80835C7.3112 2.80835 6.60286 3.10002 6.01953 3.68335C5.4362 4.26668 5.14453 4.97502 5.14453 5.80835V7.80835Z"
+                            fill="#A8A8A8" />
+                    </svg>
+                </div>
+            </section>
 
 
-            <div class="login_buttons">
+            <section class="login_buttons">
                 <button class="login_button" type="">Log in</button>
                 <button class="guest_login_button" type="">Guest Log in</button>
-            </div>
+            </section>
         </section>
 
 
