--- a/summary.html
+++ b/summary.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/summary.css" />
     <link rel="stylesheet" href="./style/navbar.css" />
     <title>Summary</title>
@@ -10,13 +11,13 @@
   <body>
     <nav class="navbar">
       <div class="navbar-logo-container">
-        <img class="navbar-logo" src="./img/icons/Join_Logo_white.svg" alt="">
+        <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="">
       </div>
         <ul class="nav-list">
-            <li><a class="navbar-link summary-text-1" href="./summary.html"><img class="navbar_img" src="./img/icons/contacts.svg" alt=""><p>Summary</p></a></li>
-            <li><a class="navbar-link summary-text-1" href="./add_task.html"><img class="navbar_img" src="./img/icons/add_task.svg" alt=""><p>Add Task</p></a></li>
-            <li><a class="navbar-link summary-text-1" href="./board.html"><img class="navbar_img" src="./img/icons/board.svg" alt=""><p>Board</p></a></li>
-            <li><a class="navbar-link summary-text-1" href="./contacts.html"><img class="navbar_img" src="./img/icons/contacts.svg" alt=""><p>Contacts</p></a></li>
+            <li><a class="navbar-link summary-text-1" href="./summary.html"><img class="navbar_img" src="./assets/svg/summary.svg" alt=""><p>Summary</p></a></li>
+            <li><a class="navbar-link summary-text-1" href="./add_task.html"><img class="navbar_img" src="./assets/svg/edit_square.svg" alt=""><p>Add Task</p></a></li>
+            <li><a class="navbar-link summary-text-1" href="./board.html"><img class="navbar_img" src="./assets/svg/board.svg" alt=""><p>Board</p></a></li>
+            <li><a class="navbar-link summary-text-1" href="./contacts.html"><img class="navbar_img" src="./assets/svg/perm_contact_calendar.svg" alt=""><p>Contacts</p></a></li>
         </ul>
         <ul class="navbar-footer">
             <li><a href="">Private Policy</a></li>
@@ -27,7 +28,7 @@
     <div class="summary-header">
       <div class="summary-header-text">Kanban Project Management Tool</div>
       <div class="summary-profil">
-        <img src="./img/icons/help.svg" alt="help" class="summary-help" />
+        <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
         <div class="profil-header"></div>
       </div>
     </div>
@@ -43,7 +44,7 @@
         <div class="summary-board-overview-todo">
           <div class="todo-content">
             <div class="todo-picture">
-              <img src="./img/icons/pencil_1.svg" />
+              <img src="./assets/svg/pencil_1.svg" />
             </div>
             <div class="todo-value"><div class="summary-text-5">1</div>
             <div class="summary-text-1">ToDo</div></div>
@@ -52,7 +53,7 @@
         <div class="summary-board-overview-done">
           <div class="todo-content">
             <div class="todo-picture">
-              <img src="./img/icons/right_1.svg" />
+              <img src="./assets/svg/right_1.svg" />
             </div>
             <div class="todo-value"><div class="summary-text-5">1</div>
             <div class="summary-text-1">ToDo</div></div></div>
@@ -62,7 +63,7 @@
       <div class="summary-board-overview-row-2">
         <div class="summary-board-overview-urgent">
           <div class="urgent-content">
-            <div class="todo-picture"><img src="./img/icons/prio.svg" /></div>
+            <div class="todo-picture"><img src="./assets/svg/prio.svg" /></div>
             <div class="todo-value">
                 <div class="summary-text-5">1</div>
                 <div class="summary-text-1">ToDo</div>
@@ -89,3 +90,5 @@
 
   </body>
 </html>
+
+<!-- //NOTE:  Navbar in ein Container zusammen mit header + main in einem Container, der vom Layout auf 100% läuft-->
