mergeing to summaryBranch, new structure for panels and navbar

--- a/summary.html
+++ b/summary.html
@@ -28,6 +28,7 @@
         </ul>
     </nav>
     
+    <section class="main">
     <div class="summary-header">
       <div class="summary-header-text">Kanban Project Management Tool</div>
       <div class="summary-profil">
@@ -36,68 +37,33 @@
       </div>
     </div>
 
-    <section class="main">
     <section class="summary-title">
       <div class="summary-title-text" id="summary-title-360">Join 360<div class="summary-title-separator-blue"></div>
       <div class="summary-title-text">Key Metrics at a Glance</div></div>
     </section>
-
-    <section class="summary-content">
-    <section class="summary-board-overview">
-      <div class="summary-board-overview-row-1">
-        <div class="summary-board-overview-todo">
-          <div class="todo-content">
-            <div class="todo-picture">
-              <img src="./assets/svg/pencil_1.svg" />
-            </div>
-            <div class="todo-value"><div class="summary-text-5">1</div>
-            <div class="summary-text-1">ToDo</div></div>
-          </div>
-        </div>
-        <div class="summary-board-overview-done">
-          <div class="todo-content">
-            <div class="todo-picture">
-              <img src="./assets/svg/right_1.svg" />
-            </div>
-            <div class="todo-value"><div class="summary-text-5">1</div>
-            <div class="summary-text-1">ToDo</div></div></div>
-          </div>
-        </div>
-      </div>
-      <div class="summary-board-overview-row-2">
-        <div class="summary-board-overview-urgent">
-          <div class="urgent-content">
-            <div class="todo-picture"><img src="./assets/svg/prio.svg" /></div>
-            <div class="todo-value">
-                <div class="summary-text-5">1</div>
-                <div class="summary-text-1">ToDo</div>
-              </div>
-            <div class="summary-title-separator-grey"></div>
-            <div class="todo-value">
-              <div class="summary-text-9">October 16, 2022</div><br><div class="summary-text-2">Upcoming Deadline</div>
-            </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="summary-board-overview-row-3">
-        <div class="summary-board-overview-tasks-in-board"><div class="summary-text-5">2</div>
-        <div class="summary-text-1">Tasks in<br>Board</div></div>
-        <div class="summary-board-overview-tasks-in-progress"><div class="summary-text-5">2</div>
-        <div class="summary-text-1">Tasks in<br>Board</div></div>
-        <div class="summary-board-overview-awaiting-feedback"><div class="summary-text-5">2</div>
-        <div class="summary-text-1">Tasks in<br>Board</div></div>
-      </div>
-    </section>
-      <div class="summary-greetings">good morning,<div id="summary-greetings-name">Kim Burmester<div></div>
-    </section>
-    </section>
     
+    <section class="summary-container">
+      <section class="summary-board-container">
+      <div class="summary-board-panels">
+        <div class="summary-board-panel">hallo</div>
+        <div class="summary-board-panel">Welt</div>
+      </div>
+      <div class="summary-board-panels">
+        <div class="summary-board-panel">hallo</div>
+      </div>
+      <div class="summary-board-panels">
+        <div class="summary-board-panel">hallo</div>
+        <div class="summary-board-panel">hallo</div>
+        <div class="summary-board-panel">hallo</div>
+      </div>
+      </section>
+      <section class="summary-greeting-container">
+      <div class="summary-greeting">good morning,
+        <div class="summary-greeting" id="summary-greeting-name">Kim Burmester</div>
+      </div>
+      </section>
+    </section>
   </section>
-
-
-
+  </section>
   </body>
 </html>
-
-<!-- //NOTE:  Navbar in ein Container zusammen mit header + main in einem Container, der vom Layout auf 100% läuft-->
