fixing some summary board designs

--- a/summary.html
+++ b/summary.html
@@ -34,40 +34,55 @@
         <div class="profil-header"></div>
       </div>
     </div>
-
     <section class="summary-title">
       <div class="summary-title-text" id="summary-title-360">Join 360<div class="summary-title-separator-blue"></div>
       <div class="summary-title-text">Key Metrics at a Glance</div></div>
     </section>
-    
     <section class="summary-container">
       <section class="summary-board-container">
-      <div class="summary-board-panels">
-        <div class="summary-board-panel s-txt-64-600">
-          <img src="./assets/svg/pencil_1.svg" class="s-img">
-          <div></div>
-          <div></div>
+        <div class="summary-board-panels">
+          <div class="summary-board-panel s-panel-gap">
+            <img src="./assets/svg/pencil_1.svg" class="s-img">
+            <div class="tasks-In-ToDo">
+              <div class="s-txt-64-600">2</div>
+              <div class="s-txt-20-400">ToDo</div>
+            </div>
+          </div>
+          <div class="summary-board-panel s-panel-gap">
+            <img src="./assets/svg/right_1.svg" class="s-img">
+            <div class="tasks-In-Done">
+              <div class="s-txt-64-600">1</div>
+              <div class="s-txt-20-400">Done</div>
+            </div>
+          </div>
         </div>
-        <div class="summary-board-panel s-txt-64-600">
-          <img src="./assets/svg/right_1.svg" class="s-img">
-          <div></div>
-          <div></div>
+      <div class="summary-board-panels">
+          <div class="summary-board-panel s-panel-gap">
+              <img src="./assets/svg/prio.svg" class="s-img">
+                <div class="tasks-In-Urgent">
+                <div class="s-txt-64-600">1</div>
+                <div class="s-txt-16-400">Urgent</div>
+            </div>
+          <div class="summary-title-separator-grey" id="s-b-separator"></div>
+          <div class="tasks-In-Deadline">
+            <div class="s-txt-21-700">October 16 2022</div>
+            <div class="s-txt-16-400">upcoming Deadline</div>
+          </div>
         </div>
       </div>
       <div class="summary-board-panels">
-        <div class="summary-board-panel s-txt-64-600" id="s-b-separator">
-          <img src="./assets/svg/prio.svg" class="s-img">
-          <div>1</div>
-          <div>Urgent</div>
-          <div class="summary-title-separator-grey"></div>
-          <div class="">October 16 2022</div>
-          <div class="">upcoming Deadline</div>
+        <div class="summary-board-panel tasks-In-Board">
+          <div class="s-txt-64-600">5</div>
+          <div class="s-txt-20-400">Tasks in<br>Board</div>
         </div>
-      </div>
-      <div class="summary-board-panels">
-        <div class="summary-board-panel s-txt-64-600">1</div>
-        <div class="summary-board-panel s-txt-64-600">1</div>
-        <div class="summary-board-panel s-txt-64-600">1</div>
+        <div class="summary-board-panel tasks-In-Progress">          
+          <div class="s-txt-64-600">2</div>
+          <div class="s-txt-20-400">Tasks in<br>Progress</div>
+        </div>
+        <div class="summary-board-panel awaiting-In-Feedback">
+          <div class="s-txt-64-600">2</div>
+          <div class="s-txt-20-400">Awaiting<br>Feedback</div>
+        </div>
       </div>
       </section>
       <section class="summary-greeting-container">
