added new class for better mergebility

--- a/contacts.html
+++ b/contacts.html
@@ -52,7 +52,7 @@
                     </a></li>
             </ul>
         </nav>
-        <main>
+        <main class="contacts-main-content">
             <header class="main-header">
 
             </header>
