--- a/summary.html
+++ b/summary.html
@@ -3,96 +3,150 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css" />
     <link rel="stylesheet" href="./style/summary.css" />
     <link rel="stylesheet" href="./style/navbar.css" />
     <title>Summary</title>
   </head>
   <body>
-
     <section class="layout">
       <nav class="navbar">
-      <div class="navbar-logo-container">
-        <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="">
-      </div>
+        <div class="navbar-logo-container">
+          <img
+            class="navbar-logo"
+            src="./assets/svg/logo_join_navbar.svg"
+            alt=""
+          />
+        </div>
+
         <ul class="nav-list">
-            <li><a class="navbar-link summary-text-1" href="./summary.html"><img class="navbar_img" src="./assets/svg/summary.svg" alt=""><p>Summary</p></a></li>
-            <li><a class="navbar-link summary-text-1" href="./add_task.html"><img class="navbar_img" src="./assets/svg/edit_square.svg" alt=""><p>Add Task</p></a></li>
-            <li><a class="navbar-link summary-text-1" href="./board.html"><img class="navbar_img" src="./assets/svg/board.svg" alt=""><p>Board</p></a></li>
-            <li><a class="navbar-link summary-text-1" href="./contacts.html"><img class="navbar_img" src="./assets/svg/perm_contact_calendar.svg" alt=""><p>Contacts</p></a></li>
+          <li>
+            <a class="navbar-link summary-text-1" href="./summary.html"
+              ><img class="navbar_img" src="./assets/svg/summary.svg" alt="" />
+              <p>Summary</p></a
+            >
+          </li>
+          <li>
+            <a class="navbar-link summary-text-1" href="./add_task.html"
+              ><img
+                class="navbar_img"
+                src="./assets/svg/edit_square.svg"
+                alt=""
+              />
+              <p>Add Task</p></a
+            >
+          </li>
+          <li>
+            <a class="navbar-link summary-text-1" href="./board.html"
+              ><img class="navbar_img" src="./assets/svg/board.svg" alt="" />
+              <p>Board</p></a
+            >
+          </li>
+          <li>
+            <a class="navbar-link summary-text-1" href="./contacts.html"
+              ><img
+                class="navbar_img"
+                src="./assets/svg/perm_contact_calendar.svg"
+                alt=""
+              />
+              <p>Contacts</p></a
+            >
+          </li>
         </ul>
+
         <ul class="navbar-footer">
-            <li><a href="">Private Policy</a></li>
-            <li><a href="">Legal Notice</a></li>
+          <li><a href="">Privacy Policy</a></li>
+          <li><a href="">Legal Notice</a></li>
         </ul>
-    </nav>
-    <section class="main">
-    <div class="summary-header">
-      <div class="summary-header-text">Kanban Project Management Tool</div>
-      <div class="summary-profil">
-        <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
-        <div class="profil-header"></div>
-      </div>
-    </div>
-    <section class="summary-title">
-      <div class="summary-title-text" id="summary-title-360">Join 360<div class="summary-title-separator-blue"></div>
-      <div class="summary-title-text">Key Metrics at a Glance</div></div>
-    </section>
-    <section class="summary-container">
-      <section class="summary-board-container">
-        <div class="summary-board-panels">
-          <div class="summary-board-panel s-panel-gap">
-            <img src="./assets/svg/pencil_1.svg" class="s-img">
-            <div class="tasks-In-ToDo">
-              <div class="s-txt-64-600">2</div>
-              <div class="s-txt-20-400">ToDo</div>
-            </div>
-          </div>
-          <div class="summary-board-panel s-panel-gap">
-            <img src="./assets/svg/right_1.svg" class="s-img">
-            <div class="tasks-In-Done">
-              <div class="s-txt-64-600">1</div>
-              <div class="s-txt-20-400">Done</div>
-            </div>
+      </nav>
+
+      <section class="main">
+        <div class="summary-header">
+          <div class="summary-header-text">Kanban Project Management Tool</div>
+          <div class="summary-profil">
+            <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
+            <div class="profil-header"></div>
           </div>
         </div>
-      <div class="summary-board-panels">
-          <div class="summary-board-panel s-panel-gap">
-              <img src="./assets/svg/prio.svg" class="s-img">
-                <div class="tasks-In-Urgent">
-                <div class="s-txt-64-600">1</div>
-                <div class="s-txt-16-400">Urgent</div>
-            </div>
-          <div class="summary-title-separator-grey" id="s-b-separator"></div>
-          <div class="tasks-In-Deadline">
-            <div class="s-txt-21-700">October 16 2022</div>
-            <div class="s-txt-16-400">upcoming Deadline</div>
+
+        <section class="summary-title">
+          <div class="summary-title-text" id="summary-title-360">
+            Join 360
+            <div class="summary-title-separator-blue"></div>
+            <div class="summary-title-text">Key Metrics at a Glance</div>
           </div>
-        </div>
-      </div>
-      <div class="summary-board-panels">
-        <div class="summary-board-panel tasks-In-Board">
-          <div class="s-txt-64-600">5</div>
-          <div class="s-txt-20-400">Tasks in<br>Board</div>
-        </div>
-        <div class="summary-board-panel tasks-In-Progress">          
-          <div class="s-txt-64-600">2</div>
-          <div class="s-txt-20-400">Tasks in<br>Progress</div>
-        </div>
-        <div class="summary-board-panel awaiting-In-Feedback">
-          <div class="s-txt-64-600">2</div>
-          <div class="s-txt-20-400">Awaiting<br>Feedback</div>
-        </div>
-      </div>
+        </section>
+
+        <section class="summary-container">
+          <section class="summary-board-container">
+            <div class="summary-board-panels">
+              <div class="summary-board-panel s-panel-gap">
+                <img src="./assets/svg/pencil_1.svg" class="s-img" alt="" />
+                <div class="tasks-In-ToDo">
+                  <div class="s-txt-64-600">2</div>
+                  <div class="s-txt-20-400">ToDo</div>
+                </div>
+              </div>
+
+              <div class="summary-board-panel s-panel-gap">
+                <img src="./assets/svg/right_1.svg" class="s-img" alt="" />
+                <div class="tasks-In-Done">
+                  <div class="s-txt-64-600">1</div>
+                  <div class="s-txt-20-400">Done</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="summary-board-panels">
+              <div class="summary-board-panel s-panel-gap">
+                <div class="summary-board-urgent">
+                  <img src="./assets/svg/prio.svg" class="s-img" alt="" />
+                  <div class="tasks-In-Urgent">
+                    <div class="s-txt-64-600">1</div>
+                    <div class="s-txt-16-400">Urgent</div>
+                  </div>
+                </div>
+
+                <div
+                  class="summary-title-separator-grey"
+                  id="s-b-separator"
+                ></div>
+
+                <div class="tasks-In-Deadline">
+                  <div class="s-txt-21-700">October 16 2022</div>
+                  <div class="s-txt-16-400">upcoming Deadline</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="summary-board-panels">
+              <div class="summary-board-panel tasks-In-Board">
+                <div class="s-txt-64-600">5</div>
+                <div class="s-txt-20-400">Tasks in<br />Board</div>
+              </div>
+
+              <div class="summary-board-panel tasks-In-Progress">
+                <div class="s-txt-64-600">2</div>
+                <div class="s-txt-20-400">Tasks in<br />Progress</div>
+              </div>
+
+              <div class="summary-board-panel awaiting-In-Feedback">
+                <div class="s-txt-64-600">2</div>
+                <div class="s-txt-20-400">Awaiting<br />Feedback</div>
+              </div>
+            </div>
+          </section>
+
+          <section class="summary-greeting-container">
+            <div class="summary-greeting" id="greeting-text"></div>
+            <div class="summary-greeting" id="summary-greeting-name">
+              Max Mustermann
+            </div>
+          </section>
+        </section>
       </section>
-      <section class="summary-greeting-container">
-        <div class="summary-greeting" id="greeting-text"></div>
-        <div class="summary-greeting" id="summary-greeting-name">Kim Burmester</div>
-      </div>
-      </section>
     </section>
-  </section>
-  </section>
+
+    <script src="./script/summary.js"></script>
   </body>
-  <script src="./script/summary.js"></script>
 </html>
