changed contacts.html header and copied navbar in summary.html

--- a/contacts.html
+++ b/contacts.html
@@ -53,7 +53,7 @@
             </ul>
         </nav>
         <main class="contacts-main-content">
-            <header class="main-header">
+            <header class="main-contacts-header">
 
             </header>
 
