--- a/summary.html
+++ b/summary.html
@@ -11,54 +11,42 @@
   <body>
     <section class="layout">
       <nav class="navbar">
-        <div class="navbar-logo-container">
-          <img
-            class="navbar-logo"
-            src="./assets/svg/logo_join_navbar.svg"
-            alt=""
-          />
-        </div>
-
-        <ul class="nav-list">
-          <li>
-            <a class="navbar-link summary-text-1" href="./summary.html"
-              ><img class="navbar_img" src="./assets/svg/summary.svg" alt="" />
-              <p>Summary</p></a
-            >
-          </li>
-          <li>
-            <a class="navbar-link summary-text-1" href="./add_task.html"
-              ><img
-                class="navbar_img"
-                src="./assets/svg/edit_square.svg"
-                alt=""
-              />
-              <p>Add Task</p></a
-            >
-          </li>
-          <li>
-            <a class="navbar-link summary-text-1" href="./board.html"
-              ><img class="navbar_img" src="./assets/svg/board.svg" alt="" />
-              <p>Board</p></a
-            >
-          </li>
-          <li>
-            <a class="navbar-link summary-text-1" href="./contacts.html"
-              ><img
-                class="navbar_img"
-                src="./assets/svg/perm_contact_calendar.svg"
-                alt=""
-              />
-              <p>Contacts</p></a
-            >
-          </li>
-        </ul>
-
-        <ul class="navbar-footer">
-          <li><a href="">Privacy Policy</a></li>
-          <li><a href="">Legal Notice</a></li>
-        </ul>
-      </nav>
+            <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="">
+            <ul class="nav-list">
+                <li><a class="navbar-link" href="./summary.html">
+                        <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/summary.svg"
+                                alt="Summary Logo">
+                            <p>Summary</p>
+                        </div>
+                    </a></li>
+                <li><a class="navbar-link" href="./add_task.html">
+                        <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/edit_square.svg"
+                                alt="Add-Task Logo">
+                            <p>Add Task</p>
+                        </div>
+                    </a></li>
+                <li><a class="navbar-link" href="./board.html">
+                        <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/board.svg"
+                                alt="Board Logo">
+                            <p>Board</p>
+                        </div>
+                    </a></li>
+                <li><a class="navbar-link navbar-active" href="./contacts.html">
+                        <div class="navbar-link-content"><img class="navbar_img"
+                                src="./assets/svg/perm_contact_calendar.svg" alt="Contacts Logo">
+                            <p>Contacts</p>
+                        </div>
+                    </a></li>
+            </ul>
+            <ul class="navbar-footer">
+                <li><a class="navbar-footer-link" href="">
+                        <p>Private Policy</p>
+                    </a></li>
+                <li><a class="navbar-footer-link" href="">
+                        <p>Legal Notice</p>
+                    </a></li>
+            </ul>
+        </nav>
 
       <section class="main">
         <div class="summary-header">
