changed navbar-active on summary.html

--- a/summary.html
+++ b/summary.html
@@ -13,7 +13,7 @@
       <nav class="navbar">
             <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="">
             <ul class="nav-list">
-                <li><a class="navbar-link" href="./summary.html">
+                <li><a class="navbar-link navbar-active" href="./summary.html">
                         <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/summary.svg"
                                 alt="Summary Logo">
                             <p>Summary</p>
@@ -31,7 +31,7 @@
                             <p>Board</p>
                         </div>
                     </a></li>
-                <li><a class="navbar-link navbar-active" href="./contacts.html">
+                <li><a class="navbar-link" href="./contacts.html">
                         <div class="navbar-link-content"><img class="navbar_img"
                                 src="./assets/svg/perm_contact_calendar.svg" alt="Contacts Logo">
                             <p>Contacts</p>
