--- a/board.html
+++ b/board.html
@@ -10,70 +10,42 @@
 <body>
     <div class="layout">
       <nav class="navbar">
-      <img class="navbar-logo" src="./img/icons/logo_join_nav.png" alt="" />
-      <ul class="nav-list">
-        <li>
-          <a class="navbar-link" href="./summary.html">
-            <div class="navbar-link-content">
-              <img
-                class="navbar_img"
-                src="./assets/svg/summary.svg"
-                alt="Summary Logo"
-              />
-              <p>Summary</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="navbar-link navbar-active" href="./add_task.html">
-            <div class="navbar-link-content">
-              <img
-                class="navbar_img"
-                src="./assets/svg/edit_square.svg"
-                alt="Add-Task Logo"
-              />
-              <p>Add Task</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="navbar-link" href="./board.html">
-            <div class="navbar-link-content">
-              <img
-                class="navbar_img"
-                src="./assets/svg/board.svg"
-                alt="Board Logo"
-              />
-              <p>Board</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="navbar-link " href="./contacts.html">
-            <div class="navbar-link-content">
-              <img
-                class="navbar_img"
-                src="./assets/svg/perm_contact_calendar.svg"
-                alt="Contacts Logo"
-              />
-              <p>Contacts</p>
-            </div>
-          </a>
-        </li>
-      </ul>
-      <ul class="navbar-footer">
-        <li>
-          <a class="navbar-footer-link" href="">
-            <p>Private Policy</p>
-          </a>
-        </li>
-        <li>
-          <a class="navbar-footer-link" href="">
-            <p>Legal Notice</p>
-          </a>
-        </li>
-      </ul>
-    </nav>
+            <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="Join Logo">
+            <ul class="nav-list">
+                <li><a class="navbar-link" href="./summary.html">
+                        <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/summary.svg"
+                                alt="Summary Icon">
+                            <p>Summary</p>
+                        </div>
+                    </a></li>
+                <li><a class="navbar-link" href="./add_task.html">
+                        <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/edit_square.svg"
+                                alt="Add Task Icon">
+                            <p>Add Task</p>
+                        </div>
+                    </a></li>
+                <li><a class="navbar-link navbar-active" aria-current="page">
+                        <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/board.svg"
+                                alt="Board Icon">
+                            <p>Board</p>
+                        </div>
+                    </a></li>
+                <li><a class="navbar-link" href="./contacts.html">
+                        <div class="navbar-link-content"><img class="navbar_img"
+                                src="./assets/svg/perm_contact_calendar.svg" alt="Contacts Icon">
+                            <p>Contacts</p>
+                        </div>
+                    </a></li>
+            </ul>
+            <ul class="navbar-footer">
+                <li><a class="navbar-footer-link" href="">
+                        <p>Private Policy</p>
+                    </a></li>
+                <li><a class="navbar-footer-link" href="">
+                        <p>Legal Notice</p>
+                    </a></li>
+            </ul>
+        </nav>
         <main>
             <header class="main-header">
                 
