--- a/contacts.html
+++ b/contacts.html
@@ -16,29 +16,29 @@
             </div>
         </section>
         <nav class="navbar">
-            <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="">
+            <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="Join Logo">
             <ul class="nav-list">
                 <li><a class="navbar-link" href="./summary.html">
                         <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/summary.svg"
-                                alt="Summary Logo">
+                                alt="Summary Icon">
                             <p>Summary</p>
                         </div>
                     </a></li>
                 <li><a class="navbar-link" href="./add_task.html">
                         <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/edit_square.svg"
-                                alt="Add-Task Logo">
+                                alt="Add Task Icon">
                             <p>Add Task</p>
                         </div>
                     </a></li>
                 <li><a class="navbar-link" href="./board.html">
                         <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/board.svg"
-                                alt="Board Logo">
+                                alt="Board Icon">
                             <p>Board</p>
                         </div>
                     </a></li>
-                <li><a class="navbar-link navbar-active" href="./contacts.html">
+                <li><a class="navbar-link navbar-active" aria-current="page">
                         <div class="navbar-link-content"><img class="navbar_img"
-                                src="./assets/svg/perm_contact_calendar.svg" alt="Contacts Logo">
+                                src="./assets/svg/perm_contact_calendar.svg" alt="Contacts Icon">
                             <p>Contacts</p>
                         </div>
                     </a></li>
