--- a/add_task.html
+++ b/add_task.html
@@ -21,7 +21,7 @@
                         <p>Summary</p>
                     </div>
                 </a></li>
-            <li><a class="navbar-link navbar-active" aria-current="page">
+            <li><a class="navbar-link navbar-active" href="./add_task.html" aria-current="page">
                     <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/edit_square.svg"
                             alt="Add-Task Logo">
                         <p>Add Task</p>
