--- a/board.html
+++ b/board.html
@@ -24,7 +24,7 @@
                             <p>Add Task</p>
                         </div>
                     </a></li>
-                <li><a class="navbar-link navbar-active" aria-current="page">
+                <li><a class="navbar-link navbar-active" href="./board.html" aria-current="page">
                         <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/board.svg"
                                 alt="Board Icon">
                             <p>Board</p>
