--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
                             <p>Board</p>
                         </div>
                     </a></li>
-                <li><a class="navbar-link navbar-active" aria-current="page">
+                <li><a class="navbar-link navbar-active" href="./contacts.html" aria-current="page">
                         <div class="navbar-link-content"><img class="navbar_img"
                                 src="./assets/svg/perm_contact_calendar.svg" alt="Contacts Icon">
                             <p>Contacts</p>
