--- a/summary.html
+++ b/summary.html
@@ -13,7 +13,7 @@
       <nav class="navbar">
             <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="">
             <ul class="nav-list">
-                <li><a class="navbar-link navbar-active" aria-current="page">
+                <li><a class="navbar-link navbar-active" href="./summary.html" aria-current="page">
                         <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/summary.svg"
                                 alt="Summary Logo">
                             <p>Summary</p>
