changed header in contacts.html and contacts.css

--- a/contacts.html
+++ b/contacts.html
@@ -54,7 +54,13 @@
         </nav>
         <main class="contacts-main-content">
             <header class="main-contacts-header">
-
+                <div class="summary-header content-limit-header">
+                    <div class="summary-header-text">Kanban Project Management Tool</div>
+                    <div class="summary-profil">
+                        <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
+                        <div class="profil-header"></div>
+                    </div>
+                </div>
             </header>
 
             <div class="contacts-content content-limit">
