--- a/contacts.html
+++ b/contacts.html
@@ -8,41 +8,43 @@
     <title>Contacts</title>
 </head>
 
-<body class="contact-area">
-    <section class="content-area">
+<body>
+    <section class="layout">
         <section id="overlay" class="overlay d_none" onclick="closeOverlay()">
             <div id="overlay_content" class="overlay-shadow-pos-rel-container">
 
             </div>
         </section>
         <nav class="navbar">
-            <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="Join Logo">
-            <ul class="nav-list">
-                <li><a class="navbar-link" href="./summary.html">
-                        <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/summary.svg"
-                                alt="Summary Icon">
-                            <p>Summary</p>
-                        </div>
-                    </a></li>
-                <li><a class="navbar-link" href="./add_task.html">
-                        <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/edit_square.svg"
-                                alt="Add Task Icon">
-                            <p>Add Task</p>
-                        </div>
-                    </a></li>
-                <li><a class="navbar-link" href="./board.html">
-                        <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/board.svg"
-                                alt="Board Icon">
-                            <p>Board</p>
-                        </div>
-                    </a></li>
-                <li><a class="navbar-link navbar-active" href="./contacts.html" aria-current="page">
-                        <div class="navbar-link-content"><img class="navbar_img"
-                                src="./assets/svg/perm_contact_calendar.svg" alt="Contacts Icon">
-                            <p>Contacts</p>
-                        </div>
-                    </a></li>
-            </ul>
+            <div class="navbar-content-limiter">
+                <img class="navbar-logo" src="./assets/svg/logo_join_navbar.svg" alt="Join Logo">
+                <ul class="nav-list">
+                    <li><a class="navbar-link" href="./summary.html">
+                            <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/summary.svg"
+                                    alt="Summary Icon">
+                                <p>Summary</p>
+                            </div>
+                        </a></li>
+                    <li><a class="navbar-link" href="./add_task.html">
+                            <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/edit_square.svg"
+                                    alt="Add Task Icon">
+                                <p>Add Task</p>
+                            </div>
+                        </a></li>
+                    <li><a class="navbar-link" href="./board.html">
+                            <div class="navbar-link-content"><img class="navbar_img" src="./assets/svg/board.svg"
+                                    alt="Board Icon">
+                                <p>Board</p>
+                            </div>
+                        </a></li>
+                    <li><a class="navbar-link navbar-active" href="./contacts.html" aria-current="page">
+                            <div class="navbar-link-content"><img class="navbar_img"
+                                    src="./assets/svg/perm_contact_calendar.svg" alt="Contacts Icon">
+                                <p>Contacts</p>
+                            </div>
+                        </a></li>
+                </ul>
+            
             <ul class="navbar-footer">
                 <li><a class="navbar-footer-link" href="">
                         <p>Private Policy</p>
@@ -51,15 +53,19 @@
                         <p>Legal Notice</p>
                     </a></li>
             </ul>
+            </div>
         </nav>
         <main class="contacts-main-content">
             <header class="main-contacts-header">
-                <div class="summary-header content-limit-header">
-                    <div class="summary-header-text">Kanban Project Management Tool</div>
+                <div class="summary-header">
+                    <div class="content-limit-header">
+                        <div class="summary-header-text">Kanban Project Management Tool</div>
                     <div class="summary-profil">
                         <img src="./assets/svg/help.svg" alt="help" class="summary-help" />
                         <div class="profil-header"></div>
                     </div>
+                    </div>
+                    
                 </div>
             </header>
 
