--- a/board.html
+++ b/board.html
@@ -57,7 +57,7 @@
                             </div>
                         </a>
                     </li>
-                    <li><a class="navbar-link navbar-active" href="./board.html">
+                    <li><a class="navbar-link navbar-active" href="./board.html" aria-current="page">
                             <div class="navbar-link-content">
                                 <svg class="navbar_img" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                     viewBox="0 0 30 30" fill="none">
@@ -72,7 +72,7 @@
                             </div>
                         </a>
                     </li>
-                    <li><a class="navbar-link" href="./contacts.html" aria-current="page">
+                    <li><a class="navbar-link" href="./contacts.html">
                             <div class="navbar-link-content">
                                 <svg class="navbar_img" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                     fill="none">
