--- a/add_task.html
+++ b/add_task.html
@@ -42,7 +42,7 @@
                             </div>
                         </a>
                     </li>
-                    <li><a class="navbar-link navbar-active" href="./add_task.html">
+                    <li><a class="navbar-link navbar-active" href="./add_task.html" aria-current="page">
                             <div class="navbar-link-content">
                                 <svg class="navbar_img" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                     viewBox="0 0 30 30" fill="none">
@@ -75,7 +75,7 @@
                             </div>
                         </a>
                     </li>
-                    <li><a class="navbar-link" href="./contacts.html" aria-current="page">
+                    <li><a class="navbar-link" href="./contacts.html">
                             <div class="navbar-link-content">
                                 <svg class="navbar_img" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30"
                                     fill="none">
