overworked contacts.html, added favicon, added contacts_templates.js, move teplate-functions and reworked contacts_overlay.css

--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./assets/svg/favicon.svg">
     <link rel="stylesheet" href="./style/style.css">
     <title>Contacts</title>
 </head>
@@ -358,6 +359,9 @@
             </div>
         </main>
     </section>
+
+    
+    <script src="./script/contact_templates.js"></script>
     <script src="./script/contact.js"></script>
 </body>
 
