--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <main id="main">
-        <!-- Log In and Sign Up will be rendert here -->
+        <!-- Log In and Sign Up will be render here -->
     </main>
 
 </body>
